# OpenXR_VideoPlayer_Demo

./: .gitignore  README.md
OpenXR/Projects/AndroidPrebuilt/: AndroidManifest.xml
OpenXR/Projects/AndroidPrebuilt/jni/: Android.mk
OpenXR/Sample/VideoPlayer/: CMakeLists.txt  build.gradle  settings.gradle
OpenXR/Sample/VideoPlayer/app/: AndroidManifest.xml  CMakeLists.txt  VideoGLTex.cpp  VideoGLTex.h  check.h  geometry.h  graphicsplugin.h  graphicsplugin_opengles.cpp  graphicsplugin_vulkan.cpp  logger.cpp  main.cpp  main.h  openxr_program.cpp  openxr_program.h  options.h  pController.cpp  pController.h  pch.h  player.cpp  player.h
OpenXR/Sample/VideoPlayer/app/java/com/khronos/hello_xr/: MainActivity.java
OpenXR/Sample/VideoPlayer/app/java/com/khronos/player/: MainActivity.java  VideoSurface.java
OpenXR/Sample/VideoPlayer/app/vulkan_shaders/: frag.glsl  frag.spv  generate spv command.txt  shader.frag  shader.vert  vert.spv
OpenXR/Sample/VideoPlayer/gradle/wrapper/: gradle-wrapper.properties
OpenXR/Sample/VideoPlayer/openxr_loader/include/common/: gfxwrapper_opengl.c
OpenXR/Sample/VideoPlayer/openxr_loader/include/openxr/: openxr_pico.h
